# UK-Environmental-Intelligence-Catalogue

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VVIP-UPLOAD-INSTRUCTIONS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  code-audit-v0.9.md  data-model.md  intelligence.md  windows-quickstart.md
examples/: ukei.env.example
src/ukei/: __init__.py  __main__.py  catalogue.py  cli.py  config.py  intelligence.py  licensing.py  logging_config.py  models.py  normalization.py  seeds.py  url_safety.py
src/ukei/connectors/: __init__.py  base.py
src/ukei/data/: __init__.py  official_sources.v1.json
src/ukei/discovery/: __init__.py  arcgis.py  base.py  ckan.py  http.py
src/ukei/validation/: __init__.py  base.py  live.py  merge.py  report.py  resources.py  severity.py  summary.py
tests/: conftest.py  test_catalogue.py  test_cli.py  test_config.py  test_discovery.py  test_intelligence.py  test_licensing.py  test_models.py  test_normalization.py  test_seeds.py  test_sharding.py  test_summary.py  test_validation.py
