[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ukei-catalogue"
version = "0.9.0"
description = "A verifiable catalogue framework for UK environmental data sources."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "UK Environmental Intelligence Catalogue contributors" }]
keywords = ["environment", "open-data", "provenance", "catalogue", "UK"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]
intelligence = [
  "google-genai>=1.0",
  "openai>=2.0",
  "scikit-learn>=1.6",
]

[project.scripts]
ukei = "ukei.cli:main"

[project.urls]
Homepage = "https://github.com/homegundredaroad/UK-Environmental-Intelligence-Catalogue"
Repository = "https://github.com/homegundredaroad/UK-Environmental-Intelligence-Catalogue"
Issues = "https://github.com/homegundredaroad/UK-Environmental-Intelligence-Catalogue/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ukei"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/docs", "/examples", "/README.md", "/CHANGELOG.md"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=ukei --cov-report=term-missing --cov-fail-under=90"
filterwarnings = ["error::ResourceWarning"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["src/ukei/intelligence.py"]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["google", "google.*", "openai", "sklearn", "sklearn.*"]
ignore_missing_imports = true
